--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,12 @@ img {
   max-width:3em;
   max-height:3em;
 }
+
+video {
+	max-width: 100%;
+	max-height: 100%;
+}
+
+li {
+	margin: 0 0 1em 0;
+}
