--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,13 @@ video {
 li {
 	margin: 0 0 1em 0;
 }
+
+hr { 
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+}
