--- a/css/layouts/marketing.css
+++ b/css/layouts/marketing.css
@@ -5,17 +5,23 @@
 }
 
 body {
-    color: #7f8c8d;
+    color: white;
 }
 
 h1,
-h2,
+h2{
+    color: #66D9EF;
+}
+
 h3,
-h4,
 h5,
-h6,
-label {
-    color: #34495e;
+label{
+    color: #A6E22E;
+}
+
+h4,
+h6{
+    color: #66D9EF;
 }
 
 .pure-img-responsive {
@@ -90,7 +96,7 @@ a.pure-button-primary {
     box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
 }
 .home-menu {
-    background: #cff4a4;
+    background: rgba(0, 0, 0, 0.8);
 }
 .pure-menu.pure-menu-fixed {
     /* Fixed menus normally have a border at the bottom. */
@@ -100,23 +106,27 @@ a.pure-button-primary {
 }
 
 .home-menu .pure-menu-heading {
-    color: black;
+    color: white;
     font-weight: 400;
-    font-size: 2em;
+    font-size: 1.3em;
 }
 
 .home-menu .pure-menu-selected a {
-    color: black;
+    color: white;
 }
 
 .home-menu a {
-    color: #6FBEF3;
+    color: white;
 }
 .home-menu li a:hover,
 .home-menu li a:focus {
     background: none;
     border: none;
-    color: #AECFE5;
+    color: white;
+}
+
+.home-menu .pure-menu-selected{
+    color:white;
 }
 
 
@@ -148,7 +158,6 @@ a.pure-button-primary {
 /* This is the main heading that appears on the blue section */
 .splash-head {
     font-weight: bold;
-    color: white;
     border: 3px solid white;
     border-radius: 5px;
     line-height: 1em;
@@ -172,7 +181,7 @@ a.pure-button-primary {
     width: 100%;
     min-height: 12%;
     z-index: 2;
-    background: white;
+    background: #272822;
 
 }
 
@@ -191,7 +200,7 @@ a.pure-button-primary {
 
 /* This is the class used for the content sub-headers (<h3>) */
 .content-subhead {
-    color: #1f8dd6;
+    color: #A6E22E;
 }
     .content-subhead i {
         margin-right: 7px;
