--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,13 @@ img {
 }
 
 video {
-	max-width: 100%;
-	max-height: 100%;
+	max-width: 75%;
+	max-height: 75%;
 }
 
 li {
 	margin: 0 0 1em 0;
+  list-style-type: none;
 }
 
 hr { 
@@ -41,3 +42,15 @@ hr {
 .course{
   margin: 0 0 0 0;
 }
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -5em;
+    visibility: hidden;
+}
+
+#header{
+  color:white;
+}
+
